<resources>
    <string name="app_name">Hackathon</string>
    <string name="registration_title">Registration</string>
    <string name="login_text_field_hint">Login</string>
    <string name="password_text_field_hint">Password</string>
    <string name="login_title">Login</string>
    <string name="register_text">Register</string>
    <string name="login_text">Login</string>
    <string name="trust_level">Trust level</string>
</resources>